时间范围计算函数完成

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.23)
 project(c_script)
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(arrayString source/ArrayString.cpp)
-add_executable(durationWeekTime source/durationWeekTime.cc)
+add_executable(arrayString source/pmArrayString.cpp)
+add_executable(pmDurationWeekTime source/pmDurationWeekTime.cpp)
+add_executable(pmDurationWeekTimeY source/pmDurationCalendarY.cpp)
+add_executable(pmDurationWeekTimeX source/pmDurationCalendarX.cpp)
 add_executable(test source/test.cc)
 add_executable(pmDuration source/pmDuration.c source/pmDurationY.c source/pmDurationX.c)
