时间范围计算函数 bug修复

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ add_executable(arrayString source/pmArrayString.cpp)
 add_executable(pmDurationWeekTime source/pmDurationWeekTime.cpp)
 add_executable(pmDurationWeekTimeY source/pmDurationCalendarY.cpp)
 add_executable(pmDurationWeekTimeX source/pmDurationCalendarX.cpp)
-add_executable(test source/test.cc)
+add_executable(test source/test.cpp)
 add_executable(pmDuration source/pmDuration.c source/pmDurationY.c source/pmDurationX.c)
